Fix alignment of Hero Section

--- a/styles.css
+++ b/styles.css
@@ -34,8 +34,13 @@ body {
 
 .hero-section {
     background-color: #1F2937;
+}
+
+.hero-content {
+    width: 80%;
     display: flex;
-    justify-content: space-around;
+    margin: auto;
+    justify-content: space-between;
     align-items: center;
 }
 
